--- a/templates/test.html
+++ b/templates/test.html
@@ -3,101 +3,138 @@
 {% block content %}
 <style>
     .dataTables_filter { /* tako da hide-a njihov default search button*/
-        display: none;
+        /* display: none; */
+    }
+    td {
+        padding: 8px !important;
+        height: 10px !important; /*ne promjeni na manje nez zas, na vece oce*/
+        /* overflow: hidden !important; */
+        padding: 58px 0;
+        vertical-align: middle !important;
+        /* text-align: center !important; */
+    }
+    tr {
+        height: 39px !important;
+        overflow: hidden;
+        /* line-height: 39px !important;  */
+    }
+    td a {
+        font-size: 14px !important;
+    }
+    td button {
+        height: 22px !important;
+        min-width: 36px !important;
+        font-size: 12px !important;
+        padding: 1px 5px !important;
+    }
+    .progress {
+        width: 100px !important;
+    }
+    .testresults {
+        width: 100px !important;
+    }
+
+    .tags {
+        width: 200px !important;
+    }
+    .result {
+        width: 30px !important;
     }
 </style>
-<div style="width: 80%; margin-left: 10%">
+<div class="page-top-offset" style="width: 70%; margin: 0px; position: relative;">
     <h2><b>{{test.title}}</b></h2>
-    <div style="/*position: absolute; right: 200px*/"> <!-- ne radi input ako styleam?????-->
-        <input id="input" placeholder="pretrazi" />
-    </div>
-    <table id="example" class="table /*table-striped*/ /*table-bordered*/" style="width:100%">
-      <thead>
-          <tr>
-              <th></th>
-              <th>Zadatak</th>
-              <th>Rezultat</th>
-              <th>
-                <svg xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                        fill="currentColor"
-                        class="bi bi-tags-fill"
-                        viewBox="0 0 16 16">
-                    <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                    <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
-                </svg>
-                  Tagovi</th>
-          </tr>
-      </thead>
-      <tbody>
-        {% for assignment in assignments %}
-            <tr role="row" class="odd">
-                <td class="result">
-                    {% if assignment.percentage == 100 %}
-                        <i class="fa-solid fa-check" style="color: green;"></i>
-                    {% else %}    
-                        <i class="fa-solid fa-xmark" style="color: red;"></i>
-                    {% endif %}
-                </td>
-                <td>
-                    <a href="{% url 'uoop:assignment' assignment.id %}">{{ assignment.title }}</a>
-                </td>
-                <td class="testresults">
-                    <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="{{ assignment.percentage }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ assignment.percentage }}%"> <!--iako baca error, svejedno radi kako treba, ako dodas jos '' onda ne prikazuje kako treba-->
-                            {{ assignment.percentage }}%
+    <div>
+        <div style="position: absolute; right: 0px"> <!-- ne radi input ako styleam?????-->
+            <!-- <input id="input" placeholder="pretrazi" value="111"/> -->
+        </div>
+        <table id="example" class="table /*table-striped*/ /*table-bordered*/" style="width:100%">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Zadatak</th>
+                    <th>Rezultat</th>
+                    <th>
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                                width="16"
+                                height="16"
+                                fill="currentColor"
+                                class="bi bi-tags-fill"
+                                viewBox="0 0 16 16">
+                            <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+                            <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
+                        </svg>
+                        Tagovi</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for assignment in assignments %}
+                    <tr role="row" class="odd">
+                        <td class="result">
+                            {% if assignment.percentage == 100 %}
+                                <i class="fa-solid fa-check" style="color: green;"></i>
+                            {% else %}    
+                                <i class="fa-solid fa-xmark" style="color: red;"></i>
+                            {% endif %}
+                        </td>
+                        <td>
+                            <a href="{% url 'uoop:assignment' assignment.id %}">{{ assignment.title }}</a>
+                        </td>
+                        <td class="testresults">
+                            <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="{{ assignment.percentage }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ assignment.percentage }}%"> <!--iako baca error, svejedno radi kako treba, ako dodas jos '' onda ne prikazuje kako treba-->
+                                    {{ assignment.percentage }}%
+                                </div>
+                            </div>
+                        </td>
+                        <td class="tags ellipsis" title="izlaz, ulaz">
+                            <!-- <span>{{ assignment.tags.name }}</span> kaze da je none ??-->
+                            {% for tag in assignment.tags.all %}
+                                <button type="button" class="btn btn-primary btn-xs">{{ tag.name }}</button>
+                            {% endfor %}
+                        </td>
+                    </tr>
+                {% endfor %}
+                <tr role="row" class="odd">
+                    <td class="result">
+                        <span class="glyphicon_green glyphicon glyphicon-ok"></span>
+                    </td>
+                    <td>
+                        <a href="">Zadatak 2</a>
+                    </td>
+                    <td class="testresults">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                60%
+                            </div>
                         </div>
-                    </div>
-                </td>
-                <td class="tags ellipsis" title="izlaz, ulaz">
-                    <!-- <span>{{ assignment.tags.name }}</span> kaze da je none ??-->
-                    {% for tag in assignment.tags.all %}
-                        <button type="button" class="btn btn-primary btn-xs">{{ tag.name }}</button>
-                    {% endfor %}
-                </td>
-            </tr>
-        {% endfor %}
-        <tr role="row" class="odd">
-            <td class="result">
-                <span class="glyphicon_green glyphicon glyphicon-ok"></span>
-            </td>
-            <td>
-                <a href="">Zadatak 2</a>
-            </td>
-            <td class="testresults">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                        60%
-                    </div>
-                </div>
-            </td>
-            <td class="tags ellipsis" title="izlaz, ulaz">
-                <button class="btn btn-primary btn-xs" type="button">izlaz</button>
-                <button type="button" class="btn btn-primary btn-xs">ulaz</button>
-            </td>
-        </tr>
-        <tr role="row" class="odd">
-            <td class="result">
-                <span class="glyphicon_green glyphicon glyphicon-ok"></span>
-            </td>
-            <td>
-                <a href="">Zadatak 3</a>
-            </td>
-            <td class="testresults">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-                        30%
-                    </div>
-                </div>
-            </td>
-            <td class="tags ellipsis" title="izlaz, ulaz">
-                <button class="btn btn-primary btn-xs" type="button">izlaz</button>
-                <button type="button" class="btn btn-primary btn-xs">ulaz</button>
-            </td>
-        </tr>
-    </tbody>
-  </table>
+                    </td>
+                    <td class="tags ellipsis" title="izlaz, ulaz">
+                        <button class="btn btn-primary btn-xs" type="button">izlaz</button>
+                        <button type="button" class="btn btn-primary btn-xs">ulaz</button>
+                    </td>
+                </tr>
+                <tr role="row" class="odd">
+                    <td class="result">
+                        <span class="glyphicon_green glyphicon glyphicon-ok"></span>
+                    </td>
+                    <td>
+                        <a href="">Zadatak 3</a>
+                    </td>
+                    <td class="testresults">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+                                30%
+                            </div>
+                        </div>
+                    </td>
+                    <td class="tags ellipsis" title="izlaz, ulaz">
+                        <button class="btn btn-primary btn-xs" type="button">izlaz</button>
+                        <button type="button" class="btn btn-primary btn-xs">ulaz</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <script>
@@ -112,9 +149,12 @@
       // "bFilter": false,
       // "dom": "lrt",
   });
-  $('#input').keyup(function(){ //za custom search button
-      oTable.search($(this).val()).draw() ;
-  })
+//   $('#input').keyup(function(){ //za custom search button
+//       oTable.search($(this).val()).draw() ;
+//   })
+//   $('#example_filter').remove() #za removeat onaj njihov search
+
+
   // $("example_filter").css("display", "none")
   // $("example_filter").addClass("hidden")
   // document.getElementById("example_length").innerHTML = "ej"
